data/derived/fa15/progs/unify/prog2476.ml.out
Characters 61-62:
  let f a x = let a::x = x in (a * a) + (sqsum x) in
                                               ^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
